syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ceit.desktop.grpc";
option java_outer_classname = "SoftwareProto";
option objc_class_prefix = "HLW";

package software;

//用于与客户端通信时序列化和反序列化

service Software {
  rpc HardwareCheck (SoftwareCheckRequest) returns (SoftwareCheckReply) {}
}

message SoftwareCheckRequest {
  repeated SoftwareList software = 1;
}

message SoftwareCheckReply {
  int32 status = 1;
  string result = 2;
}

message SoftwareList {
  string filename = 1;
  string hash = 2;
  string install_time = 3;
  string modify_time = 4;
}